[gd_scene load_steps=26 format=2]

[ext_resource path="res://objects/cells.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/empty.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/eye/0015.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/eye/0001.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/eye/0002.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/eye/0003.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/eye/0004.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/eye/0005.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/eye/0006.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/eye/0007.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/eye/0008.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/eye/0009.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/eye/0010.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/eye/0011.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/eye/0012.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/eye/0013.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/eye/0014.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/basic/0006.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/basic/0001.png" type="Texture" id=19]
[ext_resource path="res://assets/sprites/basic/0002.png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/basic/0003.png" type="Texture" id=21]
[ext_resource path="res://assets/sprites/basic/0004.png" type="Texture" id=22]
[ext_resource path="res://assets/sprites/basic/0005.png" type="Texture" id=23]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 3 ) ],
"loop": true,
"name": "eye",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 18 ) ],
"loop": true,
"name": "move",
"speed": 12.0
} ]

[node name="cells" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="eye" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 1 )
animation = "idle"

[node name="eye_anim_timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="basic_anim_timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="basic" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 2 )
animation = "idle"
playing = true
[connection signal="animation_finished" from="eye" to="." method="on_eye_animation_finished"]
[connection signal="timeout" from="eye_anim_timer" to="." method="on_eye_anim_timer_timeout"]
[connection signal="timeout" from="basic_anim_timer" to="." method="on_basic_anim_timer_timeout"]
[connection signal="animation_finished" from="basic" to="." method="on_basic_animation_finished"]
